# NekoDBMS

./: .gitignore  .gitlab-ci.yml  CMakeList.txt  CMakeLists.txt  README.md  example.dbms  notepad.md  package-lock.json  package.json
examples/: functionExample.dbms  functionExampleComments.dbms
src/: database.json  index.js  index.ts  main.cpp
src/Compiler/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Paser.cpp  Paser.h  Token.cpp  Token.h
src/Compiler/Adapters/: AbstractComplier.cpp  AbstractComplier.h  PostgreSQLComplier.cpp  PostgreSQLComplier.h  SchemaInstructions.h
src/Compiler/Lexer/: KeywordFactory.cpp  KeywordFactory.h
src/Compiler/Lexer/Keywords/: KeywordBoolean.cpp  KeywordBoolean.h  KeywordDepends.cpp  KeywordDepends.h  KeywordEnd.cpp  KeywordEnd.h  KeywordInteger.cpp  KeywordInteger.h  KeywordNull.cpp  KeywordNull.h  KeywordPrimary.cpp  KeywordPrimary.h  KeywordSchema.cpp  KeywordSchema.h  KeywordString.cpp  KeywordString.h  KeywordTable.cpp  KeywordTable.h
src/Compiler/Lexer/Keywords/Abstract/: BasicKeyword.h  Observer.cpp  Observer.h  ObserverKeyword.cpp  ObserverKeyword.h
src/Compiler/Lexer/Keywords/Constructors/: KeywordFunction.cpp  KeywordFunction.h  KeywordSchema.cpp  KeywordSchema.h  KeywordTable.cpp  KeywordTable.h
src/Compiler/Lexer/Keywords/Operations/: DataOperations.cpp  DataOperations.h  KeywordDepends.cpp  KeywordDepends.h  KeywordEnd.h  KeywordLet.cpp  KeywordLet.h  KeywordReturn.cpp  KeywordReturn.h  OperationAssign.cpp  OperationAssign.h
src/Compiler/Lexer/Keywords/Operations/DataOperations/: OperationJoin.cpp  OperationJoin.h  OperationSelect.cpp  OperationSelect.h
src/Compiler/Lexer/Keywords/Types/: KeywordBoolean.cpp  KeywordBoolean.h  KeywordInteger.cpp  KeywordInteger.h  KeywordNull.cpp  KeywordNull.h  KeywordPrimary.cpp  KeywordPrimary.h  KeywordString.cpp  KeywordString.h
src/Gateways/: SourceCodeGateway.cpp  SourceCodeGateway.h
src/steps/: createApplicationUserCommands.ts  createDatabaseCommands.ts  createStoredProcedures.ts  executeCommands.ts  parseJson.ts
test/Compiler/: TestLexer.cpp  TestParser.cpp
test/Compiler/Adapters/: TestPostgreSQLComplier.cpp
test/Compiler/Lexer/Keywords/Constructors/: TestKeywordFunction.cpp
test/Compiler/Lexer/Keywords/Operations/: TestKeywordLet.cpp  TestKeywordReturn.cpp
test/Gateways/: TestSourceCodeGateway.cpp
